--- a/public/views/resv-info.html
+++ b/public/views/resv-info.html
@@ -1,5 +1,10 @@
 
-
+<script src="js/jquery.snow.min.1.0.js"></script>
+<script>
+$(document).ready( function(){
+$.fn.snow({ minSize: 15, maxSize: 50, newOn: 1000, flakeColor: '#0099FF' });
+});
+</script>
 <div class="container">
 	<div class="jumbotron" id="resv">
 		<h3>Thank you for choosing Alaska Airlines.</h3> 
