--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 body {
-    overflow-x: hidden;
-    background: #00BFFF;
+    background: #158fbf;
+    padding-top: 120px;
 }
 
 p {
@@ -12,11 +12,6 @@ p.small {
 }
 
 
-#pen{
-    max-width: 200px;
-    max-height: 300px;
-}
-
 h1
 {
     text-transform: uppercase;
@@ -27,48 +22,6 @@ h1
 
 .img-centered {
     margin: 0 auto;
-}
-
-header {
-    text-align: center;
-    color: #fff;
-    
-}
-
-header .container {
-    padding-bottom: 50px;
-}
-
-header img {
-    display: block;
-    margin: 0 auto 20px;
-}
-
-header .intro-text .name {
-    display: block;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 2em;
-    font-weight: 700;
-}
-
-header .intro-text .skills {
-    font-size: 1.25em;
-    font-weight: 300;
-}
-
-
-header .container {
-    padding-top: 130px;
-    padding-bottom: 100px;
-}
-
-header .intro-text .name {
-    font-size: 4.75em;
-}
-
-header .intro-text .skills {
-    font-size: 1.75em;
 }
 
 
@@ -84,6 +37,7 @@ header .intro-text .skills {
     -webkit-transition: all .3s;
     -moz-transition: all .3s;
     transition: all .3s;
+    max-width: 20px;
 }
 
 .navbar-fixed-top.navbar-shrink {
@@ -117,13 +71,4 @@ header .intro-text .skills {
     color: #F2E394;
 
 }
-
-#logo{
-    padding-top: 0px;
-    max-height: 100px;
-    max-width: 200px;
-
-}
-
-
 
