--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -1,3 +1,18 @@
+
+<!-- Header -->
+<header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <img class="img-responsive" id="pen" src="img/p1.png">
+                <div class="intro-text">
+                    <h1>Welcome!</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
 <!-- Find Flights Form-->
 <div class="find-flight-form">
     <div class="container">
@@ -63,4 +78,6 @@
         
     </div>
 </div>
+
+
 
