--- a/public/views/payment.html
+++ b/public/views/payment.html
@@ -1,4 +1,4 @@
-<header ng-app="airline" ng-controller="payment">
+<header ng-app="alaska" ng-controller="paymentCtrl">
         <div class="container"  ng-init="tab = 0">
             <div class="page-header">
                <h1>Payment Details</h1>
