--- a/public/views/passengerInfo.html
+++ b/public/views/passengerInfo.html
@@ -2,7 +2,7 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
+        <div class="container" ng-controller="SubmitCtr">
             <div class="row">
                 <div class="col-lg-12">
                   
