--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -3,22 +3,22 @@
     max-height: 300px;
 }
 
-header {
+.header {
     text-align: center;
     color: #fff;
     
 }
 
-header .container {
+.header .container {
     padding-bottom: 50px;
 }
 
-header img {
+.header img {
     display: block;
     margin: 0 auto 20px;
 }
 
-header .intro-text .name {
+.header .intro-text .name {
     display: block;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -26,22 +26,22 @@ header .intro-text .name {
     font-weight: 700;
 }
 
-header .intro-text .skills {
+.header .intro-text .skills {
     font-size: 1.25em;
     font-weight: 300;
 }
 
 
-header .container {
+.header .container {
     padding-top: 0px;
     padding-bottom: 20px;
 }
 
-header .intro-text .name {
+.header .intro-text .name {
     font-size: 4.75em;
 }
 
-header .intro-text .skills {
+.header .intro-text .skills {
     font-size: 1.75em;
 }
 
@@ -64,5 +64,17 @@ header .intro-text .skills {
 .form-group{
     padding: 20px;
 }
+
+#find-flight-button{
+
+}
+
+.ng-invalid .ng-pristine{
+    border-color: #FA787E;
+}
+
+
+
+
 
 
