--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -1,91 +1,82 @@
 
-<!-- Header -->
-<header>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <img class="img-responsive" id="pen" src="img/p1.png">
-                <div class="intro-text">
-                    <h1>Welcome!</h1>
+    <!-- Header -->
+        <div class="container header">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img class="img-responsive" id="pen" src="img/p1.png">
+                    <div class="intro-text">
+                        <h1>Welcome!</h1>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</header>
 
-<!-- Find Flights Form-->
+    <!-- Find Flights Form-->
 
-   
-<div class="container" ng-controller="landingCtrl">
-     <div class="find-flight-form">
-        <div class="row jumbotron">
-            <div class="col-lg-12">
-            
-                <h1 id="form-title">Where can we take you?</h1>
+       
+    <div class="container find-flight-form" >
+        <div class="jumbotron">
 
-                <form class="form-inline" role="form" >
-                    <label class="checkbox-inline"><input type="checkbox" value="" ng-model="form.oneway">One-way</label>
-                 
-                    <div class="row">
-                        <div class="form-group">
-                            <input  class="form-control" id="fromCountry" placeholder="Select dept airport" ng-model="form.fromCountry">
-
-                            <select class="form-control" id="fromCountry" ng-model="form.fromCountry" ng-options="airport.iata as airport.name for airport in airports">
-                            </select>
-
-
-                        </div>
-
-                        <div class="form-group">
-                               <input class="form-control"  type="date" id="fromDate" ng-model="form.fromDate"></input>
-                        </div>
-
-                         <div class="form-group">
-                            <select class="form-control" id="selectAdultNo" ng-model="form.adultNo">
-                                <option value="1" selected>1 Adult</option>
-                                <option value="2">2 Adults</option>
-                                <option value="3">3 Adults</option>
-                                <option value="4">4 Adults</option>
-                                <option value="5">5 Adults</option>
-                            </select>
-                        </div>
-                    </div>
                 
-                    <div class="row">
-                        <div class="form-group">
-                            <input class="form-control" id="toCountry" placeholder="Select dest airport" ng-model="form.toCountry">
-                             <select class="form-control" id="toCountry" ng-model="form.toCountry" ng-options="airport.iata as airport.name for airport in airports">
-                            </select>
+                    <h2 id="form-title">Where can we take you?</h1>
+
+                    <form name="flightForm" class="form-inline" novalidate>
+                        <label class="checkbox-inline"><input type="checkbox" value="" ng-model="form.oneway">One-way</label>
+                       
+
+                        <div class="row">
+                            
+                                <div class="form-group col-sm-6">
+                                    <select class="form-control" ng-model="form.fromCountry" ng-options="airport.iata as airport.name for airport in airports | filter:notNull" required>
+                                    </select>
+                                </div>
+
+                                <div class="form-group col-sm-6">
+                                     <select class="form-control" ng-model="form.toCountry" ng-options="airport.iata as airport.name for airport in airports | filter:notNull" required>
+                                    </select>
+                                </div>
+
+                        </div>
+                    
+                        <div class="row">
+                                <div class="col-sm-3">
+                                    <h3>Outgoing Date</h3>
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <input class="form-control" type="date" value="2016-05-04" ng-model="form.outgoingDate" required ></input>
+                                </div>
+
+                                <div class="col-sm-3" ng-hide="form.oneway">
+                                    <h3>Return Date</h3>
+                                </div>
+                                <div class="form-group col-sm-3">
+                                    <input class="form-control"  type="date" value="2016-05-05" ng-model="form.returnDate" ng-hide="form.oneway" required></input>
+                                </div>
                         </div>
 
-                         <div class="form-group">
-                            <input class="form-control" type="date" id="ToDate" ng-model="form.toDate"></input>
+
+                        <div class="row">
+                            <div class="form-group">
+                                <select class="form-control" ng-model="form.class" required>
+                                    <option value="Economy"  selected>Economy</option>
+                                    <option value="Business">Business</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <!--<button type="button" class="btn btn-info">Find Flights</button>-->
+                                <input  type="button" class="btn btn-info" value="Find Flights" ng-click="flightForm.$valid &&findFlightsButtonClick()" ></input>
+                         
+                            </div>
+
                         </div>
 
-                        <div class="form-group">
-                            <select class="form-control" id="selectClass" ng-model="form.class">
-                                <option value="Economy" selected>Economy</option>
-                                <option value="Business">Business</option>
-                            </select>
-                        </div>
+                    </form>
 
-                        <div class="form-group">
-                            <!--<button type="button" class="btn btn-info">Find Flights</button>-->
-                            <button type="submit" class="btn btn-info" ng-click="findFlightsButtonClick">Find Flights</button>
-                     
-                        </div>
-
-                    </div>
-
-                </form>
-
-            </div>
-
+                
         </div>
             
     </div>
-        
-</div>
 
 
 
