--- a/public/views/flight-info.html
+++ b/public/views/flight-info.html
@@ -1,11 +1,11 @@
-  <div ng-controller="FlightInfoCtrl">
-        
+  <div>
+
         <div  class="page-header" >
 
                <h1>Flight Status</h1>
             </div>
              <table class = " table table-bordered">
-             
+
              <thead>
                 <tr>
                  <th style="font-size:25px; ">Flight Info</th>
@@ -28,8 +28,8 @@
 
 
 
-                 
-                  
+
+
                </tr>
 
             </tbody>
