--- a/public/views/flights.html
+++ b/public/views/flights.html
@@ -14,7 +14,7 @@
                 <button type="submit" class="btn btn-default">Modify</button>
             </form>
         </div>
-        <div ng-controller="FlightController">
+        <div>
             <div id="flightInfo"  style="float: left;">
                 <table class="table table-bordered">
                     <tr ng-repeat="x in infos" >
@@ -56,5 +56,5 @@
                 <button ng-show="infoFlightNo.index!=null" type="button" class="btn btn-primary btn-lg" ng-click='Continue()'>Continue</button>
             </div>
         </div>
-    
+
  </header>
