--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -57,7 +57,7 @@
 
                         <div class="row">
                             <div class="form-group">
-                                <select class="form-control" ng-model="form.class" required>
+                                <select class="form-control" ng-model="form.class">
                                     <option value="Economy"  selected>Economy</option>
                                     <option value="Business">Business</option>
                                 </select>
