--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -13,7 +13,7 @@
 <!-- Find Flights Form-->
 
 
-<div class="container find-flight-form" >
+<div class="container find-flight-form" id="book" >
   <div class="jumbotron">
 
 
@@ -71,25 +71,32 @@
 
     </div>
   </div>
-  <div class="container" id="viewBF">
-    <div class="row viewBooking">
-      <div class="col-sm-3">
-        <div class = "input-group">
-          <input type = "text" class = "form-control" placeholder="Booking ref no.">
-          <span class = "input-group-btn">
-            <button class = "btn btn-default hvr-pulse" type = "button" href="/#booking-info">Find Booking</button>
-          </span>
+  <div class="container text-center" id="viewBF">
+    <div class="jumbotron">
+      <div class="row text-center">
+
+        <div class = "form-group text-center">
+          <input type = "text" class = "input-lg form-control" placeholder="Booking Refernce" ng-model="bookingRef" >
+
         </div>
+      </div>
+      <div class="row text-center">
+        <button class = "btn btn-default hvr-pulse btn-lg" type = "button" ng-click="showBooking()">Find Booking</button>
       </div>
     </div>
   </div>
-  <div class="row " id="checkFlight">
-    <div class="col-sm-3">
-      <div class = "input-group">
-        <input type = "text" class = "form-control" placeholder="Flight no.">
-        <span class = "input-group-btn">
-          <button class = "btn btn-default hvr-pulse" type = "button" href="/#flights">Find Flight</button>
-        </span>
+  <div class="container text-center" id="checkFlight">
+    <div class="jumbotron text-center">
+      <div class="row text-center">
+
+        <div class = "form-group  text-center  ">
+          <input type = "text" class = "input-lg form-control" placeholder="Flight Number">
+
+        </div>
+      </div>
+      <div class="row text-center">
+        <button class = "btn btn-default hvr-pulse btn-lg" type = "button" ng-click="checkFlight()">Check Flight</button>
       </div>
     </div>
+
   </div>
