--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,79 +1,70 @@
-body {
-    background: #158fbf;
-    padding-top: 120px;
+@font-face {
+  font-family: Alegreya;
+  src: url("../fonts/AlegreyaSans-MediumItalic.ttf");
 }
 
+body {
+  background-image: url("../img/alaska3.png");
+  padding-top: 120px;
+  font-family: Alegreya;
+}
+div{
+  background-color: rgba(0, 0, 0, 0);
+}
+.jumbotron{
+  background-color: rgba(0, 0, 0, 0);
+  opacity: 0;
+
+
+}
 p {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 p.small {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 
-h1
+.intro-text
 {
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 800;
+  font-family: Alegreya;
+  font-weight: 800;
+  font-size: 4em;
+  padding-top: 50px;
 }
 
 
 .img-centered {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 
-.navbar-fixed-top {
-    padding: 25px 0;
-    -webkit-transition: padding .3s;
-    -moz-transition: padding .3s;
-    transition: padding .3s;
-}
-
-.navbar-fixed-top .navbar-brand {
-    font-size: 2em;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    transition: all .3s;
-}
-
-.navbar-fixed-top.navbar-shrink {
-    padding: 10px 0;
-}
-
-.navbar-fixed-top.navbar-shrink .navbar-brand {
-    font-size: 1.5em;
-}
 
 
 .navbar {
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    background: #fff;
+  padding-top: 10px;
+  background-color: #01426a;
 }
 
 
-.navbar .navbar-nav {
-    letter-spacing: 1px;
-}
+
 
 .navbar .navbar-nav li a{
-    color: #496F8C;
-    font-size: 1.5em;
+  color: #fff;
+  font-size: 1.5em;
 
 }
 .navbar .navbar-nav li a:hover{
+  color: #496F8C;
 
-    color: #F2E394;
+}
+.navbar .navbar-nav li a:focus{
+  color: #496F8C;
 
 }
 #logo{
-    padding-top: 0px;
-    max-height: 100px;
-    max-width: 200px;
+  padding-top: 10px;
 }
 
 @-webkit-keyframes hvr-pulse {
@@ -128,3 +119,4 @@ h1
 #cart{
   background-color: #b1c1c5;
 }
+.alaska-logo path{fill:#fff}
