--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -1,14 +1,7 @@
 
-<div class="container header">
-  <div class="row">
-    <div class="col-lg-12">
-      <img class="img-responsive" id="pen" src="img/p1.png">
-      <div class="intro-text">
-        <h1>Welcome!</h1>
-      </div>
-    </div>
+  <!-- <img class="img-responsive" id="pen" src="img/p1.png"> -->
+  <div class="intro-text">
   </div>
-</div>
 
 <!-- Find Flights Form-->
 
@@ -64,7 +57,6 @@
         </div>
       </form>
       <div class="row">
-        <!--<button type="button" class="btn btn-info">Find Flights</button>-->
         <input type="button" class="btn btn-info hvr-pulse btn-lg pull-right" value="Find Flights" ng-click="flightForm.$valid &&findFlightsButtonClick()" ></input>
 
       </div>
@@ -100,3 +92,12 @@
     </div>
 
   </div>
+  <script src="js/typed.js"></script>
+  <script>
+  $(function(){
+    $(".intro-text").typed({
+      strings: ["Welcome!", "Ready to book on Alaska Airlines?","One can't simply resist snow!","Book now!"],
+      typeSpeed: 0
+    });
+  });
+  </script>
