--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -96,7 +96,7 @@
   <script>
   $(function(){
     $(".intro-text").typed({
-      strings: ["Welcome!", "Ready to book on Alaska Airlines?","One can't simply resist snow!","Book now!"],
+      strings: ["Welcome!", "Ready to book on Alaska Airlines?"],
       typeSpeed: 0
     });
   });
