--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,12 +59,13 @@ p.small {
 
 }
 .navbar .navbar-nav li a:focus{
-  color: #496F8C;
-
+  color: #fff;
 }
 .navbar .navbar-nav li a:active{
-  color: #496F8C;
-
+  color: #fff;
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
+  background-color: #496F8C;
 }
 
 
