--- a/public/views/resv-show.html
+++ b/public/views/resv-show.html
@@ -11,13 +11,13 @@
       <div class="route">
         <div class="diagram"><img src="http://s18.postimg.org/d8yqxdkjt/c_Gjlath.png"/></div>
         <div class="half">
-          <div class="circle" id="LHR">
+          <div class="circle">
             <span class="airport">LHR</span>
             <span class="city">London</span>
           </div>
         </div><!--
         --><div class="half">
-        <div class="circle" id="BKK">
+        <div class="circle">
           <span class="airport">BKK</span>
           <span class="city">Bangkok</span>
         </div>
