--- a/public/css/main.css
+++ b/public/css/main.css
@@ -213,7 +213,7 @@ p.small {
 #footer {
   background-color: #01426a;
   color: #fff;
-  font-family: Alegreya;
+  font-family: Alegreya, sans-serif;
   width: 100%;
   height: 100%;
 }
